cmake_minimum_required(VERSION 3.21)
project(data_struct)

set(CMAKE_CXX_STANDARD 14)

add_executable(data_struct Stack/SimpleCalculator.cpp LinearList/LinearList.h LinearList/SeqList.h LinearList/LinkList.h LinearList/CircList.h LinearList/DblList.h Stack/Stack.h Stack/DualStack.h Stack/LinkedStack.h Stack/SimpleCalculator.cpp Queue/SeqQueue.h Queue/LinkedQueue.h Queue/Pascal.cpp Queue/PQueue.h Table/SparseMatrix.h Table/AString.h Table/GenList.h Table/main.cpp Tree/BinTree.h Tree/main.cpp Tree/ThreadTree.h Tree/Tree.h Tree/Heap.h Tree/HuffmanTree.h Set/UFSets.h Search/BSTree.h Search/AVLTree.h Graph/Graph.h Graph/Search.h Graph/MinSpanTree.h Graph/ShortestPath.h Graph/ActivityNetwork.h)
